Add reef alignment teleop mode and related features
Introduces REEF_ALIGN_TELEOP drive state, reef alignment command, and supporting logic for branch pose selection and snap-to-angle functionality. Refactors pose and offset calculations to use a new inchesFromCenter constant. Adds new classes for obstruction kind and reef poses, updates feature flags, and improves controller input handling for alignment. Also fixes usage of pose methods and list copying in tag alignment utilities.